Implemented Redis caching for wallet balances (Phase 3 - Stories 3.1 & 3.2)
  Features:
  - Added Redis caching layer using Redisson Spring Boot starter
  - Implemented cache-aside pattern in WalletService
  - Cache wallet balances with 30-second TTL
  - Automatic cache invalidation on deposit/withdrawal operations
  - Added comprehensive logging for cache operations (HIT/MISS/INVALIDATE)

  Technical Details:
  - Created WalletCache service for centralized cache management
  - Configured RedissonCacheConfig for Spring Cache integration
  - Added Redis service to Docker Compose
  - Leveraged Spring Boot autoconfiguration for Jackson JavaTimeModule
  - Used reactive Redisson client for non-blocking cache operations

  Cache Key Format: wallet:{userId}
  Cache Storage: Binary-encoded via Redisson for efficiency

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,10 @@ services:
       - 'POSTGRES_USER=myuser'
     ports:
       - '5431:5432'
+
+  redis:
+    container_name: redis
+    hostname: redis
+    image: redis:6.2
+    ports:
+      - '6379:6379'
